updated images and fixed some design issues

--- a/src/main/webapp/app/templates/familyRegistrationEligibility.html
+++ b/src/main/webapp/app/templates/familyRegistrationEligibility.html
@@ -21,7 +21,7 @@
       <div class="col-md-12">
 
 		<ul class="alert alert-info txtBlack" style="list-style-type: none">
-			<li>You are eligible to become foster parent regardless of  your marital status,  income and  Religion.   Its not mandatory that you need your own house, have children,  be young or be wealthy to become foster parent.</li>
+			<li>“You are eligible to become foster parent regardless of  your marital status,  income and  Religion.   Its not mandatory that you need your own house, have children,  be young or be wealthy to become foster parent."</li>
 			
 		</ul>
 
