--- a/src/main/webapp/app/templates/familyRegistrationProfileThankYou.html
+++ b/src/main/webapp/app/templates/familyRegistrationProfileThankYou.html
@@ -10,10 +10,10 @@
 	</div>
     <section class="minHeight422"> <div class="row marginTop7 lightGrayBG">
         <div class="col-xs-12 col-sm-6 h3 txtBlue marginTop7">Acknowledgement</div>
-      </div>      
+      </div>
       <div class="alert alert-warning marginTop20">
 
-        <p class="text-center font1dot3em">Thank you for registering with us. <br/>Your effort to become foster parent is highly appreciated your application is under verification.<br/>You would shortly receive an email from us, soon after our case worker will contact you.</p><br/>
+        <p class="text-center font1dot3em">Thank you for registering with us. <br/>Your effort to become foster parent is highly appreciated. Your application is under verification.<br/>You would shortly receive an email from us, soon after our case worker will contact you.</p><br/>
         <p class="text-center marginTop20">
           <button type="button" class="btn btn-primary" ng-click="model.GotoMyPage()">
             <i class="glyphicon glyphicon-user"></i> Goto My Profile
