--- a/src/main/webapp/app/templates/home.html
+++ b/src/main/webapp/app/templates/home.html
@@ -1,99 +1,108 @@
 <div class="MainContainer" id="MainContainer">
-    <section>
-    	<div id="myCarousel" class="carousel slide marginBottom10" data-ride="carousel">
+  <section>
+    <div id="myCarousel" class="carousel slide marginBottom10" data-ride="carousel">
 
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="./contents/images/homepagebanner.jpg" alt="Family Registration" class="fixedHeight">
-      <div class="carousel-caption">
-      <div class="txtUppercase txtItalic">
-        <h1 class="txtWhite">HOLD THE HANDS</h1>
-        <h4>your little effort can make the</h4>
-        <h4>great difference in someone’s life</h4>
-        <h2>BECOME A FOSTER PARENT.</h2></div><br/>
-      <h3 class="carouselContentBG" style="display:inline-block"><a ng-click="model.GoToFamilyRegistration()" class="">Family Registration</a> <i class="glyphicon glyphicon glyphicon-forward"></i></h3>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img src="./contents/images/homepagebanner.jpg" alt="Family Registration" class="fixedHeight">
+          <div class="carousel-caption">
+            <div class="txtUppercase txtItalic">
+              <h1 class="txtWhite">HOLD THE HANDS</h1>
+              <h4>your little effort can make the</h4>
+              <h4>great difference in someone’s life</h4>
+              <h2>BECOME A FOSTER PARENT.</h2>
+            </div><br/>
+            <h3 class="carouselContentBG" style="display:inline-block"><a ng-click="model.GoToFamilyRegistration()" class="">Family Registration</a> <i class="glyphicon glyphicon glyphicon-forward"></i></h3>
+
+          </div>
+        </div>
 
       </div>
+
+
     </div>
 
-  </div>
-
-
-</div>
-
-     <div class="row">
+    <div class="row">
       <div class="col-xs-6 col-sm-6 col-md-3 marginBottom10"><img src="./contents/images/homeThmb1.png" border="0" class="img-responsive" /></div>
       <div class="col-xs-6 col-sm-6 col-md-3 marginBottom10"><img src="./contents/images/homeThmb2.png" border="0" class="img-responsive" /></div>
-	  <div class="col-xs-6 col-sm-6 col-md-3 marginBottom10"><img src="./contents/images/homeThmb3.png" border="0" class="img-responsive" /></div>
+      <div class="col-xs-6 col-sm-6 col-md-3 marginBottom10"><img src="./contents/images/homeThmb3.png" border="0" class="img-responsive" /></div>
       <div class="col-xs-6 col-sm-6 col-md-3 marginBottom10"><img src="./contents/images/homeThmb4.png" border="0" class="img-responsive" /></div>
     </div>
 
-		 <div class="row marginTop10">
-		  <div class="col-md-12 text-center">
-			<h2 class="txtBlue">OUR HAPPY FAMILIES</h2>
+    <div class="row marginTop10">
+      <div class="col-md-12 text-center">
+        <h2 class="txtBlue">OUR HAPPY FAMILIES</h2>
 
-		  </div>
-		 </div><!-- /.row -->
-		 <div class="row marginTop10">
-		  <div class="col-sm-4">
-            <img src="./contents/images/HappyFamilies1.jpg" width="379" height="340" alt="" class="img-responsive"/> </div>
-            <div class="col-sm-4">
-              <img src="./contents/images/HappyFamilies2.jpg" width="379" height="340" alt="" class="img-responsive"/>
+      </div>
+    </div>
+    <!-- /.row -->
+    <div class="row marginTop10">
+      <div class="col-sm-4">
+        <img src="./contents/images/HappyFamilies1.jpg" width="379" height="340" alt="" class="img-responsive" /> </div>
+      <div class="col-sm-4">
+        <img src="./contents/images/HappyFamilies2.jpg" width="379" height="340" alt="" class="img-responsive" />
+      </div>
+      <div class="col-sm-4">
+        <img src="./contents/images/HappyFamilies3.jpg" width="379" height="340" alt="" class="img-responsive" />
+      </div>
+    </div>
+    <!-- /.row -->
+
+
+
+    <div class="form-horizontal">
+      <form name="contactForm">
+        <a name="getinTouch"></a>
+        <div class="row">
+          <div class="col-md-10 col-md-offset-1">
+            <div class="row marginTop10">
+              <div class="col-md-12 text-center">
+                <h2 class="txtBlue">GET IN TOUCH</h2>
+                <div class="text-center"><img src="./contents/images/h-separator.png" border="0" /></div>
+                <h4>California Health and Human Services, 1600 Ninth Street, Room 460 Sacramento, CA 95814</h4>
+              </div>
             </div>
-            <div class="col-sm-4">
-              <img src="./contents/images/HappyFamilies3.jpg" width="379" height="340" alt="" class="img-responsive"/>
+            <!-- /.row -->
+
+            <div class="form-group marginTop10 required">
+              <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Your Name</label>
+              <div class="col-sm-4">
+                <input class="form-control" />
+              </div>
+
+              <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Your Email</label>
+              <div class="col-sm-4">
+                <input class="form-control" number="contactEmail" type="email" required>
+              </div>
             </div>
-		</div><!-- /.row -->
+            
+            <div class="form-group required marginTop10">
+              <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Mobile</label>
+              <div class="col-sm-4">
+                <input class="form-control" type="number" name="contactNumber" required>
+              </div>
 
+              <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Your Query</label>
+              <div class="col-sm-4">
+                <textarea type="text" class="form-control" placeholder=""></textarea>
+              </div>
+            </div>
 
+            <div class="row marginTop10 marginBottom10">
+              <div class="col-sm-12 text-center">
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div>
+            </div>
+            <!-- /.row -->
 
-<div class="form-horizontal">
-    <a name="getinTouch"></a> 
-	<div class="row">
-      <div class="col-md-10 col-md-offset-1">
-		 <div class="row marginTop10">
-		  <div class="col-md-12 text-center">
-			<h2 class="txtBlue">GET IN TOUCH</h2>
-			<div class="text-center"><img src="./contents/images/h-separator.png" border="0" /></div>
-			<h4>California Health and Human Services, 1600 Ninth Street, Room 460 Sacramento, CA 95814</h4>
-		  </div>
-		 </div><!-- /.row -->
-         <div class="form-group marginTop10 required">
-          <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Your Name</label>
-          <div class="col-sm-4">
-            <input class="form-control" />
-          </div>
-       
-          <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Your Email</label>
-          <div class="col-sm-4">
-            <input class="form-control" />
           </div>
         </div>
-        
-        <div class="form-group required marginTop10">
-          <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Mobile</label>
-          <div class="col-sm-4">
-            <input class="form-control" />
-          </div>
-       
-          <label for="inputPassword" class="control-label col-sm-2 paddingTop7">Your Query</label>
-          <div class="col-sm-4">
-            <textarea type="text" class="form-control" placeholder=""></textarea>
-          </div>
-        </div>
-		 
-		<div class="row marginTop10 marginBottom10">
-		  <div class="col-sm-12 text-center">
-			<button type="submit" class="btn btn-primary">Submit</button>
-		  </div>
-		</div><!-- /.row -->
-	  </div>
+      </form>
     </div>
-    </div>
-    </section>
-  </div>
+  </section>
+</div>
 <main-script></main-script>
 
 </script>
