--- a/src/main/webapp/app/templates/userPreferences.html
+++ b/src/main/webapp/app/templates/userPreferences.html
@@ -57,8 +57,8 @@
                          </div>
                      </div>
 
-                     <div ng-show="model.familyDetails.haveKids == 'y'">
-                         <div class="form-group  required" id="dv_numofkids">
+                     <div>
+                         <div class="form-group  required" id="dv_numofkids" ng-show="model.familyDetails.haveKids == 'y'">
                              <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Number of Kids</label>
                              <div class="col-sm-6">
                                  <select class="form-control" ng-model="model.familyDetails.numberOfKids" ng-change="model.setKidsSection()">
@@ -66,7 +66,7 @@
                                  </select>
                              </div>
                          </div>
-                         <div class="panel panel-default" id="dv_FirstKid">
+                         <div class="panel panel-default" id="dv_FirstKid" ng-show="model.familyDetails.haveKids == 'y'">
                              <div class="panel-heading"><b>First Kid Details</b></div>
                              <div class="panel-body">
                                  <div class="form-group required">
@@ -93,7 +93,7 @@
                                  </div>
                              </div>
                          </div>
-                         <div class="panel panel-default" id="dv_SecondKid" ng-show="model.hasTwoKids">
+                         <div class="panel panel-default" id="dv_SecondKid" ng-show="model.hasTwoKids && model.familyDetails.haveKids == 'y'">
                              <div class="panel-heading"><b>Second Kid Details</b></div>
                              <div class="panel-body">
                                  <div class="form-group required">
@@ -121,7 +121,7 @@
                              </div>
                          </div>
                          <div class="form-group required">
-                             <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Please be open in expressing your Kids behavior, emotional and other preferences</label>
+                             <label for="inputPassword" class="control-label col-sm-4 paddingTop7">Please be open in expressing your kids behavior, emotional and other preferences</label>
                              <div class="col-sm-6 paddingTop7">
                                  <textarea type="text" rows="4" class="form-control" id="kidsPref" name="kidsPref" ng-model="model.familyDetails.kidsPref" required></textarea>
                                  <span ng-show="userForm3.kidsPref.$invalid && !userForm3.kidsPref.$pristine" class="help-block"> Kid's preferences are required.</span>
