--- a/src/main/webapp/app/templates/familyRegistrationProfileStep4.html
+++ b/src/main/webapp/app/templates/familyRegistrationProfileStep4.html
@@ -3,8 +3,8 @@
     <div class="row">
         <div class="col-sm-12">
             <ol class="breadcrumb">
-                <li><a href="default.html">Home</a></li>
-                <li><a href="default.html">Establish Profile</a></li>
+                <li><a href="#/">Home</a></li>
+                <li><a href="javascript:void(0);">Establish Profile</a></li>
                 <li class="active">License &amp; Agency Detail</li>
             </ol>
         </div>
